--- a/meson.build
+++ b/meson.build
@@ -204,7 +204,7 @@ init_d_conf_data.set('SYSCONFDIR', get_option('sysconfdir'))
 dl_dep = cc.find_library('dl', required: false)
 util_dep = cc.find_library('util', required: false)
 
-subdir('bash-completion')
+subdir('tools/bash-completion')
 subdir('conf.d')
 subdir('etc')
 subdir('init.d')
@@ -216,7 +216,7 @@ subdir('src')
 subdir('support')
 subdir('sysctl.d')
 subdir('test')
-subdir('zsh-completion')
+subdir('tools/zsh-completion')
 
 meson.add_install_script('tools/meson_runlevels.sh',
   os,
